   value.  The intent is to be able to use a literal string argument to
   functions that currently require a variable name as an argument.
 * HASH-associated variables now can be inherited across channel creation, by
   prefixing the name of the hash at assignment with the appropriate number of
   underscores, just like variables.

Dialplan Variables
------------------
 * Added DYNAMIC_FEATURENAME which holds the last triggered dynamic feature.
 * Added DYNAMIC_PEERNAME which holds the unique channel name on the other side
   and is set when a dynamic feature is triggered.
 * Added PARKINGLOT which can be used with parkeddynamic feature.conf option
   to dynamically create a new parking lot matching the value this varible is
   set to.
 * Added PARKINGDYNAMIC which represents the template parkinglot defined in
   features.conf that should be the base for dynamic parkinglots.
 * Added PARKINGDYNCONTEXT which tells what context a newly created dynamic
   parkinglot should have.
 * Added PARKINGDYNPOS which holds what parking positions a dynamic parkinglot
   should have.

Queue changes
-------------
  * A new config option, penaltymemberslimit, has been added to queues.conf.
    When set this option will disregard penalty settings when a queue has too
    few members.
  * A new option, 'I' has been added to both app_queue and app_dial.
    By setting this option, Asterisk will not update the caller with
    connected line changes or redirecting party changes when they occur.
  * A 'relative-peroidic-announce' option has been added to queues.conf.  When
    enabled, this option will cause periodic announce times to be calculated
    from the end of announcements rather than from the beginning.

mISDN channel driver (chan_misdn) changes
----------------------------------------
  * Added display_connected parameter to misdn.conf to put a display string
    in the CONNECT message containing the connected name and/or number if
    the presentation setting permits it.